// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Drop aligns left right top bottom 1`] = `
<div
  class="StyledDrop-bCWxPe cBGaUc"
  tabindex="-1"
  id="drop-node"
  style="left: 0px; width: 0.1px; top: 0px; max-height: 768px;"
>
  this is a test
</div>
`;

exports[`Drop aligns left right top bottom 2`] = `
"

.cBGaUc {
  font-family: 'Work Sans',Arial,sans-serif;
  font-size: 1em;
  line-height: 1.5;
  color: #333333;
  background-color: #FFFFFF;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  border-radius: 0px;
  box-shadow: 0px 3px 8px rgba(100,100,100,0.50);
  position: fixed;
  z-index: 20;
  overflow: auto;
  outline: none;
  background-color: #f8f8f8;
  color: #333333;
  opacity: 0;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  -webkit-animation: grow-box 0.1s forwards;
  animation: grow-box 0.1s forwards;
  -webkit-animation-delay: 0.01s;
  animation-delay: 0.01s;
}

.cBGaUc * {
  box-sizing: inherit;
}"
`;

exports[`Drop aligns right left top top 1`] = `
<div
  class="StyledDrop-bCWxPe kxyQqJ"
  tabindex="-1"
  id="drop-node"
  style="left: 0px; width: 0.1px; top: 0px; max-height: 768px;"
>
  this is a test
</div>
`;

exports[`Drop aligns right left top top 2`] = `
"

.kxyQqJ {
  font-family: 'Work Sans',Arial,sans-serif;
  font-size: 1em;
  line-height: 1.5;
  color: #333333;
  background-color: #FFFFFF;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  border-radius: 0px;
  box-shadow: 0px 3px 8px rgba(100,100,100,0.50);
  position: fixed;
  z-index: 20;
  overflow: auto;
  outline: none;
  background-color: #f8f8f8;
  color: #333333;
  opacity: 0;
  -webkit-transform-origin: top right;
  -ms-transform-origin: top right;
  transform-origin: top right;
  -webkit-animation: grow-box 0.1s forwards;
  animation: grow-box 0.1s forwards;
  -webkit-animation-delay: 0.01s;
  animation-delay: 0.01s;
}

.kxyQqJ * {
  box-sizing: inherit;
}"
`;

exports[`Drop aligns right right bottom top 1`] = `
<div
  class="StyledDrop-bCWxPe jjvWTx"
  tabindex="-1"
  id="drop-node"
  style="left: 0px; width: 0.1px; top: 0px; max-height: 768px;"
>
  this is a test
</div>
`;

exports[`Drop aligns right right bottom top 2`] = `
"

.jjvWTx {
  font-family: 'Work Sans',Arial,sans-serif;
  font-size: 1em;
  line-height: 1.5;
  color: #333333;
  background-color: #FFFFFF;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  border-radius: 0px;
  box-shadow: 0px 3px 8px rgba(100,100,100,0.50);
  position: fixed;
  z-index: 20;
  overflow: auto;
  outline: none;
  background-color: #f8f8f8;
  color: #333333;
  opacity: 0;
  -webkit-transform-origin: bottom right;
  -ms-transform-origin: bottom right;
  transform-origin: bottom right;
  -webkit-animation: grow-box 0.1s forwards;
  animation: grow-box 0.1s forwards;
  -webkit-animation-delay: 0.01s;
  animation-delay: 0.01s;
}

.jjvWTx * {
  box-sizing: inherit;
}"
`;

exports[`Drop aligns right right bottom top 3`] = `
<div
  class="StyledDrop-bCWxPe jjvWTx"
  tabindex="-1"
  id="drop-node"
  style="left: 0px; width: 0.1px; top: 0px; max-height: 768px;"
>
  this is a test
</div>
`;

exports[`Drop aligns right right bottom top 4`] = `
"

.jjvWTx {
  font-family: 'Work Sans',Arial,sans-serif;
  font-size: 1em;
  line-height: 1.5;
  color: #333333;
  background-color: #FFFFFF;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  border-radius: 0px;
  box-shadow: 0px 3px 8px rgba(100,100,100,0.50);
  position: fixed;
  z-index: 20;
  overflow: auto;
  outline: none;
  background-color: #f8f8f8;
  color: #333333;
  opacity: 0;
  -webkit-transform-origin: bottom right;
  -ms-transform-origin: bottom right;
  transform-origin: bottom right;
  -webkit-animation: grow-box 0.1s forwards;
  animation: grow-box 0.1s forwards;
  -webkit-animation-delay: 0.01s;
  animation-delay: 0.01s;
}

.jjvWTx * {
  box-sizing: inherit;
}"
`;

exports[`Drop aligns skips left random 1`] = `
<div
  class="StyledDrop-bCWxPe caHVBW"
  tabindex="-1"
  id="drop-node"
  style="width: 0.1px; top: 0px; max-height: 768px;"
>
  this is a test
</div>
`;

exports[`Drop aligns skips left random 2`] = `
"

.caHVBW {
  font-family: 'Work Sans',Arial,sans-serif;
  font-size: 1em;
  line-height: 1.5;
  color: #333333;
  background-color: #FFFFFF;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  border-radius: 0px;
  box-shadow: 0px 3px 8px rgba(100,100,100,0.50);
  position: fixed;
  z-index: 20;
  overflow: auto;
  outline: none;
  background-color: #f8f8f8;
  color: #333333;
  opacity: 0;
  -webkit-transform-origin: bottom left;
  -ms-transform-origin: bottom left;
  transform-origin: bottom left;
  -webkit-animation: grow-box 0.1s forwards;
  animation: grow-box 0.1s forwards;
  -webkit-animation-delay: 0.01s;
  animation-delay: 0.01s;
}

.caHVBW * {
  box-sizing: inherit;
}"
`;

exports[`Drop aligns skips right random 1`] = `
<div
  class="StyledDrop-bCWxPe kxyQqJ"
  tabindex="-1"
  id="drop-node"
  style="width: 0.1px; max-height: 768px;"
>
  this is a test
</div>
`;

exports[`Drop aligns skips right random 2`] = `
"

.kxyQqJ {
  font-family: 'Work Sans',Arial,sans-serif;
  font-size: 1em;
  line-height: 1.5;
  color: #333333;
  background-color: #FFFFFF;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  border-radius: 0px;
  box-shadow: 0px 3px 8px rgba(100,100,100,0.50);
  position: fixed;
  z-index: 20;
  overflow: auto;
  outline: none;
  background-color: #f8f8f8;
  color: #333333;
  opacity: 0;
  -webkit-transform-origin: top right;
  -ms-transform-origin: top right;
  transform-origin: top right;
  -webkit-animation: grow-box 0.1s forwards;
  animation: grow-box 0.1s forwards;
  -webkit-animation-delay: 0.01s;
  animation-delay: 0.01s;
}

.kxyQqJ * {
  box-sizing: inherit;
}"
`;

exports[`Drop mounts 1`] = `
<div
  class="StyledDrop-bCWxPe cBGaUc"
  tabindex="-1"
  id="drop-node"
  style="left: 0px; width: 0.1px; top: 0px; max-height: 768px;"
>
  this is a test
</div>
`;

exports[`Drop mounts 2`] = `
"

.cBGaUc {
  font-family: 'Work Sans',Arial,sans-serif;
  font-size: 1em;
  line-height: 1.5;
  color: #333333;
  background-color: #FFFFFF;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  border-radius: 0px;
  box-shadow: 0px 3px 8px rgba(100,100,100,0.50);
  position: fixed;
  z-index: 20;
  overflow: auto;
  outline: none;
  background-color: #f8f8f8;
  color: #333333;
  opacity: 0;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  -webkit-animation: grow-box 0.1s forwards;
  animation: grow-box 0.1s forwards;
  -webkit-animation-delay: 0.01s;
  animation-delay: 0.01s;
}

.cBGaUc * {
  box-sizing: inherit;
}"
`;

exports[`Drop resizes 1`] = `
<div
  class="StyledDrop-bCWxPe cBGaUc"
  tabindex="-1"
  id="test"
  style="left: 0px; width: 0.1px; top: 0px; max-height: 1000px;"
>
  this is a test
</div>
`;

exports[`Drop resizes 2`] = `
"

.cBGaUc {
  font-family: 'Work Sans',Arial,sans-serif;
  font-size: 1em;
  line-height: 1.5;
  color: #333333;
  background-color: #FFFFFF;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  border-radius: 0px;
  box-shadow: 0px 3px 8px rgba(100,100,100,0.50);
  position: fixed;
  z-index: 20;
  overflow: auto;
  outline: none;
  background-color: #f8f8f8;
  color: #333333;
  opacity: 0;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  -webkit-animation: grow-box 0.1s forwards;
  animation: grow-box 0.1s forwards;
  -webkit-animation-delay: 0.01s;
  animation-delay: 0.01s;
}

.cBGaUc * {
  box-sizing: inherit;
}"
`;

exports[`Drop restrict focus 1`] = `
<div
  class="StyledDrop-bCWxPe cBGaUc"
  tabindex="-1"
  id="drop-node"
  style="left: 0px; width: 0.1px; top: 0px; max-height: 1000px;"
>
  this is a test
</div>
`;

exports[`Drop restrict focus 2`] = `
<div
  class="StyledDrop-bCWxPe cBGaUc"
  tabindex="-1"
  id="drop-node"
  style="left: 0px; width: 0.1px; top: 0px; max-height: 1000px;"
>
  this is a test
</div>
`;

exports[`Drop restrict focus 3`] = `
"

.cBGaUc {
  font-family: 'Work Sans',Arial,sans-serif;
  font-size: 1em;
  line-height: 1.5;
  color: #333333;
  background-color: #FFFFFF;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  border-radius: 0px;
  box-shadow: 0px 3px 8px rgba(100,100,100,0.50);
  position: fixed;
  z-index: 20;
  overflow: auto;
  outline: none;
  background-color: #f8f8f8;
  color: #333333;
  opacity: 0;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  -webkit-animation: grow-box 0.1s forwards;
  animation: grow-box 0.1s forwards;
  -webkit-animation-delay: 0.01s;
  animation-delay: 0.01s;
}

.cBGaUc * {
  box-sizing: inherit;
}"
`;

exports[`Drop restrict focus 4`] = `
<body>
  <div
    aria-hidden="false"
  />
</body>
`;

exports[`Drop skips invalid align 1`] = `
<div
  class="StyledDrop-bCWxPe cBGaUc"
  tabindex="-1"
  id="drop-node"
  style="width: 0.1px; max-height: 768px;"
>
  this is a test
</div>
`;

exports[`Drop skips invalid align 2`] = `
"

.cBGaUc {
  font-family: 'Work Sans',Arial,sans-serif;
  font-size: 1em;
  line-height: 1.5;
  color: #333333;
  background-color: #FFFFFF;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  border-radius: 0px;
  box-shadow: 0px 3px 8px rgba(100,100,100,0.50);
  position: fixed;
  z-index: 20;
  overflow: auto;
  outline: none;
  background-color: #f8f8f8;
  color: #333333;
  opacity: 0;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  -webkit-animation: grow-box 0.1s forwards;
  animation: grow-box 0.1s forwards;
  -webkit-animation-delay: 0.01s;
  animation-delay: 0.01s;
}

.cBGaUc * {
  box-sizing: inherit;
}"
`;

exports[`Drop updates 1`] = `
<div
  class="StyledGrommet-gGRXwz jUezAj"
>
  <input />
</div>
`;
